# StarCrash

./: README.md  __init__.py  pyproject.toml
docs/assetCreation/: GameSounds_SunVox_Project.sunvox  art.pdn  explosionSprite.pdn  powerup.pdn
docs/gameplanning/: StartingNotes.txt
lib/: Game.py  __init__.py  animatedeffect.py  assets.py  baddies.py  bullet.py  explosion.py  game.py  hands.py  loader.py  platform.py  player.py  resources.py  transformflash.py  uitext.py  uiverticalbar.py  utility.py
