[tool.poetry]
name = "upsidedown-postman"
version = "0.1.0"
description = "GGJ2022 postman game"
authors = ["Jansen McEntee <jmcenteeiv@gmail.com>"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
